# codex

codex-rs/: Cargo.toml
codex-rs/app-server/: Cargo.toml
codex-rs/app-server/src/: in_process.rs  lib.rs  llm_provider_adapter.rs
codex-rs/codex-api/src/endpoint/: responses.rs
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-client/src/: in_process_transport.rs  lib.rs  llm_config.rs  transport.rs
codex-rs/codex-server/: Cargo.toml
codex-rs/codex-server/src/: handlers.rs  main.rs  models.rs  state.rs  websocket.rs
codex-rs/codex-server/src/handlers/: llm.rs
codex-rs/codex-server/src/providers/: factory.rs  llm_hook.rs  mod.rs  types.rs
codex-rs/codex-server/src/providers/azure/: mod.rs  provider.rs
codex-rs/codex-server/src/providers/kimi/: mod.rs  provider.rs
